# news-aggregator

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  fly.toml  newslist.db  newslist_original.db  pyproject.toml  requirements.txt  run.py  test.py
app/: api_client.py  api_client_old.py  app.py  config.py  log.py  models.py  news.py  processor.py  routes.py  scraper.py  sentiment.py  utils.py
app/static/: styles.css
app/templates/: base.html  detail.html  index.html
app/templates/partials/: headlines.html
assets/: sample_response.json  spacy.py
docs/: News Aggregator.xmind  sample_response.json
news/: scraper.py
notebooks/: experiments.ipynb  new_headlines_visualization.ipynb  news_sources_visualization.ipynb  newslistdb_visual.ipynb  newspaper4k.ipynb  textblob.ipynb
