[project]
name = "news-aggregator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "great-tables>=0.14.0",
    "jupyter>=1.1.1",
    "newspaper3k>=0.2.8",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "sqlmodel>=0.0.22",
]
