[project]
name = "news-aggregator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bpython>=0.24",
    "great-tables>=0.14.0",
    "jupyter>=1.1.1",
    "lxml-html-clean>=0.4.1",
    "lxml>=5.3.0",
    "newspaper4k>=0.9.3.1",
    "pandas>=2.2.3",
    "playwright>=1.49.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "sqlmodel>=0.0.22",
    "textblob>=0.18.0.post0",
]
