[project]
name = "news-aggregator"
version = "0.1.0"
description = "News Headlines Scraper and Sentiment Analyzer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "flask>=3.1.0",
    "lxml-html-clean>=0.4.1",
    "lxml>=5.3.0",
    "newspaper4k>=0.9.3.1",
    "playwright>=1.49.0",
    "pre-commit>=4.0.1",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.36",
    "sqlmodel>=0.0.22",
    "textblob>=0.18.0.post0",
    "torch>=2.5.1",
    "transformers>=4.47.1",
]
